--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                         <a class="nav-link" href="#header-wrap">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">About</a>
+                        <a class="nav-link" href="#services">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#team">Team</a>
+                        <a class="nav-link" href="#team">Pictures</a>
                     </li>
                     <!--<li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
