--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>MOSFET | Science Bowl Tournament</title>
+    <title>David Jiang</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="static/css/slicknav.css">
@@ -21,8 +21,8 @@
     <!--    <link rel="manifest" href="static/favicon/site.webmanifest">-->
     <link rel="mask-icon" href="static/favicon/safari-pinned-tab.svg" color="#ff0027">
     <link rel="shortcut icon" href="static/favicon/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="MOSFET SciBowl">
-    <meta name="application-name" content="MOSFET SciBowl">
+    <meta name="apple-mobile-web-app-title" content="David Jiang">
+    <meta name="application-name" content="David Jiang">
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="msapplication-config" content="static/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
