--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                         <a class="nav-link" href="#header-wrap">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">About Me</a>
+                        <a class="nav-link" href="#team">Pictures</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#team">Pictures</a>
+                        <a class="nav-link" href="#services">About Me</a>
                     </li>
                     <!--<li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -83,10 +83,10 @@
                 <a href="#header-wrap">Home</a>
             </li>
             <li>
-                <a href="#services">Services</a>
+                <a href="#team">Picture(s)</a>
             </li>
             <li>
-                <a href="#team">Team</a>
+                <a href="#services">About Me</a>
             </li>
             <!--<li>
                 <a href="#contact">Contact</a>
@@ -102,11 +102,11 @@
                 <div class="heading-count">
                     <h2 style="word-wrap: break-word">David <wbr>Jiang</h2>
                     <h5 style="text-shadow: 0 2px 2px rgba(0, 0, 0, .5); word-wrap: break-word; margin-left: 10%;  margin-right: 10%">
-                        Contact me: <a href="https://www.linkedin.com/in/david-jiang-655918196/">LinkedIn</a> |
+                        Contact me: <a href="https://www.linkedin.com/in/david-jiang-655918196/" target="_blank">LinkedIn</a> |
                         <wbr>
                         djiang38 at wisc dot edu |
                         <wbr>
-                        <a href="hhttps://github.com/xpoes123/">GitHub</a>
+                        <a href="hhttps://github.com/xpoes123/" target="_blank">GitHub</a>
                     </h5>
                 </div>
 
@@ -167,11 +167,11 @@
                         <ul style="text-align: left; font-size: 115%">
                             <li>- Avid No Limit Texas Hold'em and Pot Limit Omaha player, and I am on my university's poker team.</li>
                             <br>
-                            <li>- <a href = "https://www.worldcubeassociation.org/persons/2016JIAN13">Avid Rubik's Cube solver</a>. Previously ranked 4th in the country for Fewest Moves and revolutionized the current meta fewest moves strategy </li>
+                            <li>- <a href = "https://www.worldcubeassociation.org/persons/2016JIAN13" target="_blank">Avid Rubik's Cube solver</a>. Previously ranked 4th in the country for Fewest Moves and revolutionized the current meta fewest moves strategy </li>
                             <br>
-                            <li>- <a href="https://cloud.mehvix.com/s/A6LWwFcd2AAZi7i">Still apart of high school STEM competition</a> scene through writing and organizing competitions for both science and math </li>
+                            <li>- <a href="https://cloud.mehvix.com/s/A6LWwFcd2AAZi7i" target="_blank">Still apart of high school STEM competition</a> scene through writing and organizing competitions for both science and math </li>
                             <br>
-                            <li>- <a href="https://www.chess.com/member/xpoes">Recreational chess player</a></li>
+                            <li>- <a href="https://www.chess.com/member/xpoes" target="_blank">Recreational chess player</a></li>
 
                     </ul>
                     </p>
@@ -196,15 +196,15 @@
                                     target="_blank">Colored vertex models and interacting reverse
                                     plane partitions</a>, D. Jiang, J. Guse, D. Keating (2023)</li>
                             <br>
-                            <li>- <a href="https://drive.google.com/file/d/13OQuugTwIN764EVWF-h6fNIIulrlJN0E/view?usp=sharing">Synchronous vs Asynchronous Coalitions in Multiplayer Games</a>, D. Jiang, L. Dichter, K. Buck, J. Babyak, K. Zumbrun (2023)</li>
+                            <li>- <a href="https://drive.google.com/file/d/13OQuugTwIN764EVWF-h6fNIIulrlJN0E/view?usp=sharing" target="_blank">Synchronous vs Asynchronous Coalitions in Multiplayer Games</a>, D. Jiang, L. Dichter, K. Buck, J. Babyak, K. Zumbrun (2023)</li>
                             <br>
-                            <li>- <a href="https://drive.google.com/file/d/15uc80m3IdnrJjkxpkVTcub1D9iMBmmNq/view?usp=sharing">Non-Planarity of SL(2, Z)-Orbits of Origamis</a>, D. Jiang, SH. Liao, ZL. Liu, R. Yang, L. Jeffreys (2023)</li>
+                            <li>- <a href="https://drive.google.com/file/d/15uc80m3IdnrJjkxpkVTcub1D9iMBmmNq/view?usp=sharing" target="_blank">Non-Planarity of SL(2, Z)-Orbits of Origamis</a>, D. Jiang, SH. Liao, ZL. Liu, R. Yang, L. Jeffreys (2023)</li>
                             <br>
-                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0">IN PROGRESS Generating LLT Polynomials Based on Algorithm</a>, D. Jiang, J. Guse, D. Keating (2024)</li>
+                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0" target="_blank">IN PROGRESS Generating LLT Polynomials Based on Algorithm</a>, D. Jiang, J. Guse, D. Keating (2024)</li>
                             <br>
-                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0">IN PROGRESS Mentoring Directed Reading Program for High Schoolers</a>, D. Jiang(2024)</li>
+                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0" target="_blank">IN PROGRESS Mentoring Directed Reading Program for High Schoolers</a>, D. Jiang(2024)</li>
                             <br>
-                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0">IN PROGRESS Writing and Directing Math Bowl, Math Competition for High Schoolersr</a>, D. Jiang, J. Guse, S. Suresh, H. Jin(2024)</li>
+                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0" target="_blank">IN PROGRESS Writing and Directing Math Bowl, Math Competition for High Schoolersr</a>, D. Jiang, J. Guse, S. Suresh, H. Jin(2024)</li>
     
                     </ul>
                 </div>
