--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
 
                 <div style="margin: 5em;">
-                    <h1>Undergraduate at University of Wisconsin-Madison studying Math and Computer Science</h1> <br>
+                    <h1>Undergraduate <wbr> at University of Wisconsin-Madison studying Math and Computer Science</h1> <br>
                     <p style="font-size: 170%;">If you want to grab coffee, just reach out!</p><br>
                     <!-- <a href="https://cloud.mehvix.com/s/A6LWwFcd2AAZi7i?path=%2FSciBowl%20Packets%2Fmosfet" style="font-size: 170%; color: aqua;">Packets can be found here.</a> -->
                 </div>
@@ -168,8 +168,6 @@
                             <li>- Avid No Limit Texas Hold'em and Pot Limit Omaha player, and I am on my university's poker team.</li>
                             <br>
                             <li>- <a href = "https://www.worldcubeassociation.org/persons/2016JIAN13" target="_blank">Avid Rubik's Cube solver</a>. Previously ranked 4th in the country for Fewest Moves and revolutionized the current meta fewest moves strategy </li>
-                            <br>
-                            <li>- <a href="https://cloud.mehvix.com/s/A6LWwFcd2AAZi7i" target="_blank">Still apart of high school STEM competition</a> scene through writing and organizing competitions for both science and math </li>
                             <br>
                             <li>- <a href="https://www.chess.com/member/xpoes" target="_blank">Recreational chess player</a></li>
 
