--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                            target="_blank">About Me</a></h3>
                     <p align="justify">
                         <ul style="text-align: left; font-size: 115%">
-                            <li>- Avid No Limit Texas Hold'em and Pot Limit Omaha player, and I am on my university's poker team.</li>
+                            <li>- <a href = "https://drive.google.com/file/d/1mmQPO5JKdCVvazQ-F2JN5e7QupHtF5fv/view?usp=sharing" target = "_blank">Avid No Limit Texas Hold'em </a>and Pot Limit Omaha player, and I am on my university's poker team.</li>
                             <br>
                             <li>- <a href = "https://www.worldcubeassociation.org/persons/2016JIAN13" target="_blank">Avid Rubik's Cube solver</a>. Previously ranked 4th in the country for Fewest Moves and revolutionized the current meta fewest moves strategy </li>
                             <br>
