--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
         <div class="row text-center">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="heading-count">
-                    <h2 style="word-wrap: break-word">David <wbr>Jiang</h2>
-                    <h5 style="text-shadow: 0 2px 2px rgba(0, 0, 0, .5); word-wrap: break-word; margin-left: 10%;  margin-right: 10%">
-                        Contact me: <a href="https://www.linkedin.com/in/david-jiang-655918196/" target="_blank">LinkedIn</a> |
-                        <wbr>
-                        djiang38 at wisc dot edu |
-                        <wbr>
-                        <a href="hhttps://github.com/xpoes123/" target="_blank">GitHub</a>
-                    </h5>
-                </div>
-
-                <div style="margin: 5em;">
-                    <h1>Undergraduate <wbr> at University of Wisconsin-Madison studying Math and Computer Science</h1> <br>
-                    <p style="font-size: 170%;">If you want to grab coffee, just reach out!</p><br>
-                    <!-- <a href="https://cloud.mehvix.com/s/A6LWwFcd2AAZi7i?path=%2FSciBowl%20Packets%2Fmosfet" style="font-size: 170%; color: aqua;">Packets can be found here.</a> -->
-                </div>
+                    <div class="transbox">
+                        <h2 style="word-wrap: break-word">David <wbr>Jiang</h2>
+                        <h5 style="text-shadow: 0 2px 2px rgba(0, 0, 0, .5); word-wrap: break-word; margin-left: 10%;  margin-right: 10%">
+                            Contact me: <a href="https://www.linkedin.com/in/david-jiang-655918196/" target="_blank">LinkedIn</a> |
+                            <wbr>
+                            djiang38 at wisc dot edu |
+                            <wbr>
+                            <a href="hhttps://github.com/xpoes123/" target="_blank">GitHub</a>
+                        </h5>
+                        <div style="margin: 5em;">
+                            <h1>Undergraduate <wbr> at University of Wisconsin-Madison studying Math and Computer Science</h1> <br>
+                        </div>
+                        <p style="font-size: 170%;">If you want to grab coffee, just reach out!</p><br>
+                    </div>
+                    
 
                 <!--<div class="section-info" style="margin-top: 80px">
                     <iframe src="https://discord.com/widget?id=744724495016656976&theme=dark" width="105%" height="500"
@@ -200,9 +200,9 @@
                             <br>
                             <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0" target="_blank">IN PROGRESS Generating LLT Polynomials Based on Algorithm</a>, D. Jiang, J. Guse, D. Keating (2024)</li>
                             <br>
-                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0" target="_blank">IN PROGRESS Mentoring Directed Reading Program for High Schoolers</a>, D. Jiang(2024)</li>
+                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0" target="_blank">IN PROGRESS Mentoring Directed Reading Program for High Schoolers</a>, D. Jiang (2024)</li>
                             <br>
-                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0" target="_blank">IN PROGRESS Writing and Directing Math Bowl, Math Competition for High Schoolersr</a>, D. Jiang, J. Guse, S. Suresh, H. Jin(2024)</li>
+                            <li>- <a href="https://drive.google.com/drive/u/2/folders/1frzjXUY8n-zqocPX4g96v7lPLoRRGuQ0" target="_blank">IN PROGRESS Writing and Directing Math Bowl, Math Competition for High Schoolers</a>, D. Jiang, J. Guse, S. Suresh, H. Jin (2024)</li>
     
                     </ul>
                 </div>
@@ -215,8 +215,34 @@
                     <h3>
                         <a href="https://github.com/xpoes123"
                            target="_blank" target="_blank">Projects</a></h3>
-                    <p align="justify">WORK IN PROGRESS
+                    <p align="justify">I'm not much of a developer :(
                         </p>
+                        <ul style="text-align: left; font-size: 115%">
+                            <li>- <a
+                                    href="https://youtu.be/_0MjCTbUeqc?si=cCHoXY9BKSay1VN6"
+                                    target="_blank">Science Bowl Elo Tracker</a></li>
+                            <br>
+                            <li>- <a
+                                href="https://github.com/xpoes123/connectio"
+                                target="_blank">Connectio</a></li>
+                        <br>
+                        <li>- <a
+                            href="https://github.com/xpoes123/pnow_stats"
+                            target="_blank">PokerNow Stats</a></li>
+                    <br>
+                    <li>- <a
+                        href="https://github.com/xpoes123/fake_spotify"
+                        target="_blank">Python Music Player and Downloader</a></li>
+                <br>
+                <li>- <a
+                    href="https://github.com/xpoes123/guts"
+                    target="_blank">Guts Poker vs AI</a></li>
+            <br>
+            <li>- <a
+                href="https://github.com/xpoes123/ChaosGame"
+                target="_blank">Fractal Carpet Chaos Game</a></li>
+        <br>
+                    </ul>
                 </div>
             </div>
         </div>
